Add jvm gc options to reduce stutters